fix pause overlay off center on --first

--- a/public/css/tf-styles.css
+++ b/public/css/tf-styles.css
@@ -735,18 +735,18 @@ th.upvote-col {
 
 .tf-post-item--first .tpf-play-button img {
 	position: absolute;
-	    top: 85px;
-	    display: none;
-	    left: 190px;
-	    cursor: pointer;
-	    border-radius: 33px;
-	    padding-top: 13px;
-	    padding-right: 11px;
-	    padding-left: 15px;
-	    padding-bottom: 13px;
-	    overflow: visible!important;
-	    border: 4px solid #ff0d60;
-	    z-index: 2;
+    top: 85px;
+    display: none;
+    left: 190px;
+    cursor: pointer;
+    border-radius: 33px;
+    padding-top: 13px;
+    padding-right: 11px;
+    padding-left: 15px;
+    padding-bottom: 13px;
+    overflow: visible!important;
+    border: 4px solid #ff0d60;
+    z-index: 2;
 }
 
 .tf-post-item--first .tf-overlay {
@@ -762,12 +762,16 @@ th.upvote-col {
 
 .tf-post-item--first .tpf-pause-button img {
 	position: absolute;
-    top: 120px;
+    top: 85px;
     display: none;
-    left: 100px;
+    left: 190px;
     cursor: pointer;
     border-radius: 33px;
-    padding: 13px;
+    padding-top: 13px;
+    padding-right: 11px;
+    padding-left: 15px;
+    padding-bottom: 13px;
+    overflow: visible!important;
     border: 4px solid #ff0d60;
     z-index: 2;
 }
